// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch retrieve request toBatchRetrieveBodyV2 serializes getAll request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity?$format=json HTTP/1.1

"
`;

exports[`batch retrieve request toBatchRetrieveBodyV2 serializes getByKey request 1`] = `
"Content-Type: application/http
Content-Transfer-Encoding: binary

GET /sap/opu/odata/sap/API_TEST_SRV/A_TestEntity(KeyPropertyGuid=guid'testId',KeyPropertyString='test')?$format=json HTTP/1.1

"
`;
